<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".locacoes.AdicionarLocacao">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView_AdicionarLocacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/adicionar_locacao"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_ClienteAdicionarLocacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cliente_descricao" />

            <EditText
                android:id="@+id/editText_ClienteAdicionarLocacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView_VeiculoAdicionarLocacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/veiculo_locacao" />

            <EditText
                android:id="@+id/editText_VeiculoAdicionarLocacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView_DataRetiradaAdicionarLocacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/retirada_locacao" />

            <EditText
                android:id="@+id/editText_DataRetiradaAdicionarLocacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView_DataDevolucaoAdicionarLocacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/devolucao_locacao" />

            <EditText
                android:id="@+id/editText_DataDevolucaoAdicionarLocacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView_ValorAdicionarLocacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/valor_locacao" />

            <EditText
                android:id="@+id/editText_ValorAdicionarLocacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_ExcluirAdicionarLocacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/excluir" />
                <Button
                    android:id="@+id/button_SalvarAdicionarLocacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/salvar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>