<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ModeloActivity">

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.app_loc.MenuFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView_gerenciarModelos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gerenciar_modelos"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ListarModelos"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/listar_modelos" />

        <Button
            android:id="@+id/button_AdicionarModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_modelos" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_modelos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

</LinearLayout>